--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>2.19.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.0.4</version>
+        </dependency>
 
 
     </dependencies>
